# larkbot

./: Makefile  pyproject.toml
.github/workflows/: python-ci.yaml
docs/source/: index.rst
src/bot/: __init__.py  __main__.py  bot.py  constants.py
src/bot/exts/core/: cog.py  ping.py
src/bot/exts/core/internal_eval/: __init__.py  _helpers.py  _internal_eval.py
src/bot/exts/fun/: uwu.py
src/bot/utils/: decorators.py  guild_data.py  messages.py
