[project]
name = "larkbot"
version = "0.1.0"
description = "A bot for Lark"
authors = [
    { name = "Bradley Reynolds", email = "bradley.reynolds@darbia.dev" },
]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
    "python-dotenv",
    "discord.py",
    "aiohttp",
]


[project.urls]
repository = "https://github.com/letsbuilda/larkbot/"
documentation = "https://docs.letsbuilda.dev/larkbot/"

[project.optional-dependencies]
dev = [
    "black",
    "isort",
    "pylint",
]
tests = [
    "pytest",
]
docs = [
    "sphinx",
    "furo",
    "sphinx-autoapi",
    "releases",
    "toml",
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.sphinx]
copyright = "Let's build a ..."
author = "Bradley Reynolds"

[tool.black]
target-version = ["py310"]
line-length = 120

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
addopts = "tests -r a -v --doctest-modules src"

[tool.pylint.format]
max-line-length = 120

[tool.pylint.messages_control]
disable = "W1203"
# justifications:
# W1203 (logging-fstring-interpolation) - developer UX
